--- a/index.html
+++ b/index.html
@@ -4,19 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script defer src="./js/app.js"></script>
+
     <link rel="stylesheet" href="./css/style.css">
-    <title>LEGO Minifigure or not?</title>
+    <title>Wel of geen LEGO Minifiguur?</title>
 </head>
 <body>
-    <h2>Is iets een LEGO minifiguur?</h2>
+
+    <hr>
+    <h2 class="header">Wel of geen LEGO Minifiguur?</h2>
+    <hr>
     <br>
+
+    <section id="explanation">
+    </section>
+
     <div>
         <label for="file">Afbeelding uploaden</label>
-        <input type="file" accept="image/*;capture=camera" id="file">
+        <input type="file" accept="image/*;capture=camera" id="file" class="button">
     </div>
     <br>
-    <div><img id="output" class="image"/></div>
+
+    <div class="imageContainer"><img id="output" class="image"/></div>
+    <br>
+
+    <section id="score" class="score">
+    </section>
+    <br>
+
+    <hr>
+    <footer>
+        <p>Deze website is gemaakt door Aiden Deighton, student Creative Media & Game Technologies aan de Hogeschool Rotterdam.</p>
+        <div class="socials">
+            <div><a href="mailto:1025660@hr.nl">E-mail</a></div>
+            <div><a href="https://www.instagram.com/aiddei/" target="_blank">Instagram</a></div>
+            <div><a href="https://nl.linkedin.com/in/aiden-deighton-081669234?trk=people-guest_people_search-card" target="_blank">LinkedIn</a></div>
+            <div><a href="https://github.com/AIDDEI/" target="_blank">GitHub</a></div>
+        </div>
+        <p id="copyright">© 2023 - Aiden Deighton</p>
+    </footer>
+    <hr>
+
 </body>
 </html>
